--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 			"gulp": "^3.9.0",
 			"gulp-concat": "^2.5.2",
 			"gulp-fontgen": "^0.1.5",
+			"gulp-help": "^1.6.0",
 			"gulp-imagemin": "^2.2.1",
 			"gulp-install": "^0.4.0",
 			"gulp-minify-css": "^1.1.6",
