--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 			"gulp-tap": "^0.1.3",
 			"gulp-uglify": "^1.2.0",
 			"gulp-util": "^3.0.5",
+			"jquery": "^2.1.4",
+			"jquery-ujs": "^1.1.0-1",
 			"normalize.css": "^3.0.3",
 			"npm": "2.11.3",
 			"run-sequence": "^1.1.1",
