Made modification related to CRUD on time.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 			"babelify": "^6.1.2",
 			"breakpoint-sass": "^2.6.1",
 			"browserify": "^10.2.3",
+			"console-browserify": "^1.1.0",
 			"del": "^1.2.0",
 			"event-stream": "^3.3.1",
 			"fontina": "^0.1.1",
@@ -33,6 +34,7 @@
 			"gulp-uglify": "^1.2.0",
 			"gulp-util": "^3.0.5",
 			"jquery": "^2.1.4",
+			"jquery-datetimepicker": "^2.4.0",
 			"jquery-ujs": "^1.1.0-1",
 			"normalize.css": "^3.0.3",
 			"npm": "2.11.3",
